增加左侧菜单
顶部导航增加二级导航

--- a/注意点.html
+++ b/注意点.html
@@ -28,4 +28,17 @@ nser code快捷键设置
 请求的另一种方式：
 
 npm install --save axios
+npm run build
+//
+第一次打包：
+cd dist
+npm install -g http-server
+hs
+或者下面这种
+npm install -g serve //静态服务器
+serve dist           //发布
+
+npm install --save vuex
+import Vuex from 'vuex'
+
 
